--- a/love_page.html
+++ b/love_page.html
@@ -107,11 +107,11 @@
     
     <div class="music-player">
         <audio id="bgMusic" loop>
-            <source src="https://music.163.com/song/media/outer/url?id=1901371647.mp3" type="audio/mpeg">
+            <source src="https://music.163.com/song/media/outer/url?id=1824045033.mp3" type="audio/mpeg">
         </audio>
         <div class="player-controls">
             <button id="playBtn">播放</button>
-            <span>有你在 - 王俊凯</span>
+            <span>有你在 - 赵露思</span>
         </div>
     </div>
     <style>
